--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!--Navigation Bar-->
     <header>
-      <h1>Sleepy Hollow</h1>
+      <h1>Sleepy Hollow is gone...</h1>
       <nav>
         <!--Link-->
         <ul>
