--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
     </style>
-  </head> j
+  </head> jk
   <body>
     <!--Navigation Bar-->
     <header>
