--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <!--customs fonts-->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
