index update again

--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css">
-    <!--customs fonts-->
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
-    </style>
-  </head>
-  <body>
-    <!--Navigation Bar-->
-    <header>
-      <h1>Sleepy Hollow</h1>
-      <nav>
-        <!--Link-->
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="biography.html">Biography</a></li>
-          <li><a href="music.html">Music</a></li>
-          <li><a href="albums.html">Albums</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="covers.html">Covers</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!--Welcome Block-->
-    <section id="hero">
-      <h1>My Letter to Tegan Joshua Anthony Chambers<br>(12/20/2024)</h1>
-      <p>All images covers from Sleepy Hollow's Spotifity Page</p>
-    </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <!--Footer-->
-    <footer>
-      <p>Created by DeJuan K. Cameron.</p>
-    </footer>
-  </body>
-</html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>10 Stages of Genocide Project</title>
+ </head>
+ <body>
+     
+ </body>
+ <html>
+   <head>
+     <link rel="stylesheet" href="style.css">
+     <!--customs fonts-->
+     <style>
+       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
+       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
+     </style>
+   </head>
+   <body>
+     <!--Navigation Bar-->
+     <header>
+       <h1>Sleepy Hollow</h1>
+       <nav>
+         <!--Link-->
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="biography.html">Biography</a></li>
+           <li><a href="music.html">Music</a></li>
+           <li><a href="albums.html">Albums</a></li>
+           <li><a href="news.html">News</a></li>
+           <li><a href="covers.html">Covers</a></li>
+         </ul>
+       </nav>
+     </header>
+     <!--Welcome Block-->
+     <section id="hero">
+       <h1>My Letter to Tegan Joshua Anthony Chambers<br>(12/20/2024)</h1>
+       <p>All images covers from Sleepy Hollow's Spotifity Page</p>
+     </section>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <!--Footer-->
+     <footer>
+       <p>Created by DeJuan K. Cameron.</p>
+     </footer>
+   </body>
+ </html>
