--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  </body>
  <html>
    <head>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="styles.css">
      <!--customs fonts-->
      <style>
        @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
