--- a/news.html
+++ b/news.html
@@ -2,18 +2,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <!--customs fonts-->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
     </style>
   </head>
   <body>
-    <!--Navigation Bar-->
     <header>
-      <h1>awake soild</h1>
+      <h1>Sleepy Hollow</h1>
       <nav>
-        <!--Link-->
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="biography.html">Biography</a></li>
@@ -24,17 +21,26 @@
         </ul>
       </nav>
     </header>
-    <!--Welcome Block-->
-    <section id="hero">
-      <h1>My Letter to Tegan Joshua Anthony Chambers<br>(12/20/2024)</h1>
-      <p>All images covers from Sleepy Hollow's Spotifity Page</p>
+
+    <section id="news">
+      <h2>Latest News</h2>
+      <article>
+        <h3>Upcoming Tour Dates</h3>
+        <ol>
+          <li>Undetermined</li>
+        </ol>
+      </article>
+      <article>
+        <h3>New Music Release</h3>
+        <ol>
+          <li>"Read This When You Wake Up"</li>
+        </ol>
+      </article>
     </section>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <!--Footer-->
     <footer>
       <p>Created by DeJuan K. Cameron.</p>
     </footer>
