--- a/discrimination.html
+++ b/discrimination.html
@@ -12,12 +12,16 @@
       <h1>Sleepy Follow</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="biography.html">Biography</a></li>
-          <li><a href="music.html">Music</a></li>
-          <li><a href="albums.html">Albums</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="covers.html">Covers</a></li>
+          <li><a href="classification.html">Classification</a></li>
+          <li><a href="symbolisation.html">Symbolisation</a></li>
+          <li><a href="discrimination.html">Discrimination</a></li>
+          <li><a href="dehumanisation.html">Dehumanisation</a></li>
+          <li><a href="organisation.html">Organisation</a></li>
+          <li><a href="polarisation.html">Polarisation</a></li>
+          <li><a href="preparation.html">Preparation</a></li>
+          <li><a href="persecution.html">Persecution</a></li>
+          <li><a href="extermination.html">Extermination</a></li>
+          <li><a href="denial.html">Denial</a></li>
         </ul>
       </nav>
     </header>
