--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <!--Link-->
         <ul>
-          <li><a href="classification.html">Classification</a></li>
+          <li><a href="index.html">Classification</a></li>
           <li><a href="symbolisation.html">Symbolisation</a></li>
           <li><a href="discrimination.html">Discrimination</a></li>
           <li><a href="dehumanisation.html">Dehumanisation</a></li>
