--- a/symbolisation.html
+++ b/symbolisation.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Classification </h1>
+      <h1>Symbolisation </h1>
       <nav>
         <ul>
           <li><a href="classification.html">Classification</a></li>
@@ -36,6 +36,7 @@
       <br>
       <p id="bio">Sleepy Hollow's legacy is not just rooted in his contributions to Brooklyn drill or his musical talent but also in his ability to capture the raw emotion and struggles of life in a way that resonates with people from all walks of life.</p>
     </section>
+    <sec
     <br>
     <footer>
       <p id="bio">Created by DeJuan K. Cameron.</p>
