--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Navigation Bar-->
     
     <header>
-      <h1>awake soild</h1>
+      <h1><a href="index.html">Ten Stages of Genocide</a></h1>
       <nav>
         <!--Link-->
         <ul>
