--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -27,7 +27,7 @@
     </header>
 
     <section id="bio">
-      <h2>Biography of King Sleepy Hollow: The Rise of a Rap Icon</h2>
+      <h2>Stage 4: Dehumanisation</h2>
       <p id="bio">Sleepy Hollow, a Brooklyn-based <s>rapper</s> rockstar, is known for his modern drill sound and unique blend of melodic flows. Born in the early 2000s, he was influenced by hip-hop legends like 50 Cent, Jay-Z, and Lil Wayne. His deep voice, versatile flow, and ability to craft emotional narratives set him apart from his peers in the local rap scene. In 2019, his viral success of "Deep End Freestyle" captured the grim realities of street life with a melodic twist, building a dedicated fanbase and solidifying his place as a standout voice in modern rap.</p>
       <br>
       <p id="bio">In 2020, Sleepy Hollow released his first full-length project, "Don't Panic," which featured tracks like "2 Sauce" and "Mood," blending elements of drill, trap, and melodic rap. This album expanded his audience beyond the drill community, attracting listeners from various genres who appreciated his authenticity and emotional vulnerability.</p>
@@ -38,7 +38,7 @@
     </section>
     <br>
     <footer>
-      <p id="bio">Created by DeJuan K. Cameron. - Daniel Candido. - Aiden Christian.</p>
+      <p id="bio">Created by DeJuan K. C. - Daniel C. - Aiden C.</p>
     </footer>
   </body>
 </html>
