--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -28,17 +28,14 @@
 
     <section id="bio">
       <h2>Stage 4: Dehumanisation</h2>
-      <p id="bio">Sleepy Hollow, a Brooklyn-based <s>rapper</s> rockstar, is known for his modern drill sound and unique blend of melodic flows. Born in the early 2000s, he was influenced by hip-hop legends like 50 Cent, Jay-Z, and Lil Wayne. His deep voice, versatile flow, and ability to craft emotional narratives set him apart from his peers in the local rap scene. In 2019, his viral success of "Deep End Freestyle" captured the grim realities of street life with a melodic twist, building a dedicated fanbase and solidifying his place as a standout voice in modern rap.</p>
+      <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
       <br>
-      <p id="bio">In 2020, Sleepy Hollow released his first full-length project, "Don't Panic," which featured tracks like "2 Sauce" and "Mood," blending elements of drill, trap, and melodic rap. This album expanded his audience beyond the drill community, attracting listeners from various genres who appreciated his authenticity and emotional vulnerability.</p>
-      <br>
-      <p id="bio">As his fame grew, Sleepy Hollow collaborated with other rising stars of the rap world, such as Sheff G, Lil Tjay, and Fivio Foreign. His music continued to captivate listeners with its mix of gritty drill beats and emotional introspection, and his follow-up project, "Sleepy for President," explored themes of success, survival, and self-doubt.</p>
-      <br>
-      <p id="bio">Sleepy Hollow's legacy is not just rooted in his contributions to Brooklyn drill or his musical talent but also in his ability to capture the raw emotion and struggles of life in a way that resonates with people from all walks of life.</p>
+      <b id="bio">Example</b>
+      <p>During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews </p>
     </section>
     <br>
     <footer>
-      <p id="bio">Created by DeJuan K. C. - Daniel C. - Aiden C.</p>
+      <p id="bio">Created by DeJuan C. - Daniel C. - Aiden C.</p>
     </footer>
   </body>
 </html>
