--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -31,7 +31,7 @@
       <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
       <br>
       <b id="bio">Example</b>
-      <p>During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews </p>
+      <p>During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
     </section>
     <br>
     <footer>
