--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -35,7 +35,7 @@
     </section>
     <br>
     <footer>
-      <p id="bio">Created by DeJuan C. - Daniel C. - Aiden C.</p>
+      <p id="bio">Created by DeJuan C, Daniel C, Aiden C.</p>
     </footer>
   </body>
 </html>
