--- a/discrimination.html
+++ b/discrimination.html
@@ -90,7 +90,7 @@
         </div>
     </section>
     <footer>
-      <p>Created by DeJuan K. Cameron.</p>
+      <p>Created by DeJuan C, Daniel C, Aiden C.</p>
     </footer>
   </body>
 </html>
