--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <!--customs fonts-->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
     </style>
   </head>
   <body>
-    <!--Navigation Bar-->
-    
     <header>
       <h1><a href="index.html">Ten Stages of Genocide</a></h1>
       <nav>
-        <!--Link-->
         <ul>
           <li><a href="index.html">Classification</a></li>
           <li><a href="symbolisation.html">Symbolisation</a></li>
@@ -29,19 +25,17 @@
         </ul>
       </nav>
     </header>
-    <!--Welcome Block-->
-    <section id="hero">
-      <h1>My Letter to Tegan Joshua Anthony Chambers<br>(12/20/2024)</h1>
-      <p>All images covers from Sleepy Hollow's Spotifity Page</p>
+    <section id="definition">
+
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <!--Footer-->
+    <section id="examples">
+
+    </section>
+    <section id="representation">
+
+    </section>
     <footer>
-      <p>Created by DeJuan K. Cameron.</p>
-    </footer>
+      <p>Created by DeJuan C, Daniel C, Aiden C.</p>
+    </footer> 
   </body>
 </html>
