--- a/organisation.html
+++ b/organisation.html
@@ -46,7 +46,7 @@
     <br>
     <br>
     <footer>
-      <p>Created by DeJuan K. Cameron.</p>
+      <p>Created by DeJuan C, Daniel C, Aiden C.</p>
     </footer>
   </body>
 </html>
