--- a/symbolisation.html
+++ b/symbolisation.html
@@ -38,7 +38,7 @@
     </section>
     <br>
     <footer>
-      <p id="bio">Created by DeJuan K. Cameron.</p>
+      <p>Created by DeJuan C, Daniel C, Aiden C.</p>
     </footer>
   </body>
 </html>
