--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -30,6 +30,7 @@
       <h2>Stage 4: Dehumanisation</h2>
       <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
       <br>
+      <img href="">
       <b>Example</b>
       <p id="bio">During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
     </section>
