--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -29,8 +29,8 @@
     <section id="bio">
       <h2>Stage 4: Dehumanisation</h2>
       <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
-      <br>
-      <img href="dehumanisation.jpg">
+      <br>1
+      <img src="dehumanisation.jpg">
       <b>Example</b>
       <p id="bio">During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
     </section>
