--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -26,14 +26,16 @@
       </nav>
     </header>
 
-    <section id="bio">
+    <section id="bio" class="representationText">
       <h2>Stage 4: Dehumanisation</h2>
       <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
       <br>
-      <img src="dehumanisation.jpg">
       <b>Example</b>
       <p id="bio">During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
     </section>
+    <div class="representationImage">
+    <img src="dehumanisation.jpg">
+    </div>
     <br>
     <footer>
       <p id="bio">Created by DeJuan C, Daniel C, Aiden C.</p>
