--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -26,13 +26,15 @@
       </nav>
     </header>
 
-    <section id="bio" class="representationText">
-      <h2>Stage 4: Dehumanisation</h2>
-      <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
-      <br>
-      <b>Example</b>
-      <p id="bio">During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
-    </section>
+    <div class="representationText">
+      <section id="bio">
+        <h2>Stage 4: Dehumanisation</h2>
+        <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
+        <br>
+        <b>Example</b>
+        <p id="bio">During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
+      </section>
+    </div>
     <div class="representationImage">
     <img src="dehumanisation.jpg">
     </div>
