--- a/dehumanisation.html
+++ b/dehumanisation.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>10 Stages of Genocide Project</title>
     <link rel="stylesheet" href="style.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
     </style>
-  </head>
-  <body>
-    <header>
-      <h1>Dehumanisation</h1>
-      <nav>
-        <ul>
-          <li><a href="classification.html">Classification</a></li>
-          <li><a href="symbolisation.html">Symbolisation</a></li>
-          <li><a href="discrimination.html">Discrimination</a></li>
-          <li><a href="dehumanisation.html">Dehumanisation</a></li>
-          <li><a href="organisation.html">Organisation</a></li>
-          <li><a href="polarisation.html">Polarisation</a></li>
-          <li><a href="preparation.html">Preparation</a></li>
-          <li><a href="persecution.html">Persecution</a></li>
-          <li><a href="extermination.html">Extermination</a></li>
-          <li><a href="denial.html">Denial</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div class="representationText">
-      <section id="bio">
-        <h2>Stage 4: Dehumanisation</h2>
-        <p id="bio">Those that were viewed differently were often denied their rights and treated without dignity.</p>
+</head>
+<body>
+    <nav>
+        <a href="index.html" style="font-size: 246%; text-decoration: underline;">Ten Stages of Genocide</a>
         <br>
-        <b>Example</b>
-        <p id="bio">During the genocide against the Tutsi in Rwanda, Tutsis were called <i>"cockroaches"</i>, while the nazis called jews <i>"vermin"</i>.</p>
-      </section>
-    </div>
-    <div class="representationImage">
-    <img src="dehumanisation.jpg">
-    </div>
+        <div>
+            <a href="index.html">Classification</a>
+            <a href="symbolisation.html">Symbolisation</a>
+            <a href="discrimination.html">Discrimination</a>
+            <a href="dehumanisation.html">Dehumanisation</a>
+            <a href="organisation.html">Organisation</a>
+            <a href="polarisation.html">Polarisation</a>
+            <a href="preparation.html">Preparation</a>
+            <a href="persecution.html">Persecution</a>
+            <a href="extermination.html">Extermination</a>
+            <a href="denial.html">Denial</a>
+        </div>
+    </nav>
     <br>
+    <br>
+    <br>
+    <main>
+        <h1 style="text-align: center;">[Stage Name]</h1>
+        <div class="definition">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+        </div>
+        <div class="representation">
+            <div class="representationP">
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            </div>
+            <img src="10sog.jpg" class="representationImg">
+            <img src="10sog.jpg" class="representationImg">
+        </div>
+        <div class="examples">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+        </div>
+    </main>
     <footer>
-      <p id="bio">Created by DeJuan C, Daniel C, Aiden C.</p>
+        <p>Creator; DeJuan Cameron</p>
     </footer>
-  </body>
+</body>
 </html>
