--- a/polarisation.html
+++ b/polarisation.html
@@ -1,96 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>10 Stages of Genocide Project</title>
     <link rel="stylesheet" href="style.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
     </style>
-  </head>
-  <body>
-    <header>
-      <h1>Sleepy Hollow</h1>
-      <nav>
-        <ul>
-          <li><a href="classification.html">Classification</a></li>
-          <li><a href="symbolisation.html">Symbolisation</a></li>
-          <li><a href="discrimination.html">Discrimination</a></li>
-          <li><a href="dehumanisation.html">Dehumanisation</a></li>
-          <li><a href="organisation.html">Organisation</a></li>
-          <li><a href="polarisation.html">Polarisation</a></li>
-          <li><a href="preparation.html">Preparation</a></li>
-          <li><a href="persecution.html">Persecution</a></li>
-          <li><a href="extermination.html">Extermination</a></li>
-          <li><a href="denial.html">Denial</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section id="coverList">
-      <center><h2>Albums &amp; Single Covers</h2></center>
-      <div class="slider" style="--width: 250px; --height: 250px; --quantity: 10;">
-        <div class="covers">
-          <div class="item" style="--position: 1"><img src="2Fake.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 2"><img src="2MinsOfPain.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 3"><img src="2Sauce.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 4"><img src="2055.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 5"><img src="2055Feat.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 6"><img src="allMine.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 7"><img src="badDays.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 8"><img src="betterThanUs.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 9"><img src="boyMeetsWorld.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 10"><img src="bridgeInLondon.jpg" alt="Image description" /></div>
-        </div>
-      </div>
-      <br>
-      <div class="slider" reverse="true" style="--width: 250px; --height: 250px; --quantity: 10;">
-        <div class="covers">
-          <div class="item" id="blur" style="--position: 1"><img src="cupidsGuidance.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 2"><img src="deepEndFreestyle.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 3"><img src="dieYoung.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 4"><img src="dontSLEEP.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 5"><img src="dontSleepWhileItsLitPart1.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 6"><img src="dontSleepWhileItsLitPart2.jpg" alt="Image description" /></div>
-          <div class="item" id="blur" style="--position: 7"><img src="forYou.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 8"><img src="gbg.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 9"><img src="goodGirlsAintNoFun.jpg" alt="Image description" /></div>
-          <div class="item" style="--position: 10"><img src="headTap.jpg" alt="Image description" /></div>
-        </div>
-      </div>
-      <br>
-      <h1 class="nothing-you-could-do-regular">Art Without Meaning Is Just Aesthetics</h1>
+</head>
+<body>
+    <nav>
+        <a href="index.html" style="font-size: 246%; text-decoration: underline;">Ten Stages of Genocide</a>
         <br>
-        <div class="slider" style="--width: 250px; --height: 250px; --quantity: 10;">
-          <div class="covers">          
-            <div class="item" style="--position: 1"><img src="iGetLuv.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 2"><img src="lightWorkFreestyle.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 3"><img src="marie.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 4"><img src="noLove.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 5"><img src="nostalgia.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 6"><img src="overseas.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 7"><img src="painTalk.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 8"><img src="panicPt3.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 9"><img src="readThisWhenYouWakeUp.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 10"><img src="runItUp.jpg" alt="Image description" /></div>
-          </div>
+        <div>
+            <a href="index.html">Classification</a>
+            <a href="symbolisation.html">Symbolisation</a>
+            <a href="discrimination.html">Discrimination</a>
+            <a href="dehumanisation.html">Dehumanisation</a>
+            <a href="organisation.html">Organisation</a>
+            <a href="polarisation.html">Polarisation</a>
+            <a href="preparation.html">Preparation</a>
+            <a href="persecution.html">Persecution</a>
+            <a href="extermination.html">Extermination</a>
+            <a href="denial.html">Denial</a>
         </div>
-        <br>
-        <div class="slider" reverse="true" style="--width: 250px; --height: 250px; --quantity: 10;">
-          <div class="covers">
-            <div class="item" style="--position: 1"><img src="sauceUp.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 2"><img src="sleepyHallowPresentsSleepyForPresident.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 3"><img src="stillSleep.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 4"><img src="stillSleepDeluxe.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 5"><img src="theBlackHouse.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 6"><img src="tipToe.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 7"><img src="weightOnMe.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 8"><img src="wildlife.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 9"><img src="winnersInParis.jpg" alt="Image description" /></div>
-            <div class="item" style="--position: 10"><img src="yesFreestyle.jpg" alt="Image description" /></div>
-          </div>
+    </nav>
+    <br>
+    <br>
+    <br>
+    <main>
+        <h1 style="text-align: center;">[Stage Name]</h1>
+        <div class="definition">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
         </div>
-    </section>
+        <div class="representation">
+            <div class="representationP">
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            </div>
+            <img src="10sog.jpg" class="representationImg">
+            <img src="10sog.jpg" class="representationImg">
+        </div>
+        <div class="examples">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+        </div>
+    </main>
     <footer>
-      <p>Created by DeJuan C, Daniel C, Aiden C.</p>
+        <p>Creator; DeJuan Cameron</p>
     </footer>
-  </body>
+</body>
 </html>
