--- a/symbolisation.html
+++ b/symbolisation.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>10 Stages of Genocide Project</title>
     <link rel="stylesheet" href="style.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nothing+You+Could+Do&display=swap');
     </style>
-  </head>
-  <body>
-    <header>
-      <h1>Symbolisation </h1>
-      <nav>
-        <ul>
-          <li><a href="classification.html">Classification</a></li>
-          <li><a href="symbolisation.html">Symbolisation</a></li>
-          <li><a href="discrimination.html">Discrimination</a></li>
-          <li><a href="dehumanisation.html">Dehumanisation</a></li>
-          <li><a href="organisation.html">Organisation</a></li>
-          <li><a href="polarisation.html">Polarisation</a></li>
-          <li><a href="preparation.html">Preparation</a></li>
-          <li><a href="persecution.html">Persecution</a></li>
-          <li><a href="extermination.html">Extermination</a></li>
-          <li><a href="denial.html">Denial</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section id="bio">
-      <h2>Biography of King Sleepy Hollow: The Rise of a Rap Icon</h2>
-      <p id="bio">Sleepy Hollow, a Brooklyn-based <s>rapper</s> rockstar, is known for his modern drill sound and unique blend of melodic flows. Born in the early 2000s, he was influenced by hip-hop legends like 50 Cent, Jay-Z, and Lil Wayne. His deep voice, versatile flow, and ability to craft emotional narratives set him apart from his peers in the local rap scene. In 2019, his viral success of "Deep End Freestyle" captured the grim realities of street life with a melodic twist, building a dedicated fanbase and solidifying his place as a standout voice in modern rap.</p>
-      <br>
-      <p id="bio">In 2020, Sleepy Hollow released his first full-length project, "Don't Panic," which featured tracks like "2 Sauce" and "Mood," blending elements of drill, trap, and melodic rap. This album expanded his audience beyond the drill community, attracting listeners from various genres who appreciated his authenticity and emotional vulnerability.</p>
-      <br>
-      <p id="bio">As his fame grew, Sleepy Hollow collaborated with other rising stars of the rap world, such as Sheff G, Lil Tjay, and Fivio Foreign. His music continued to captivate listeners with its mix of gritty drill beats and emotional introspection, and his follow-up project, "Sleepy for President," explored themes of success, survival, and self-doubt.</p>
-      <br>
-      <p id="bio">Sleepy Hollow's legacy is not just rooted in his contributions to Brooklyn drill or his musical talent but also in his ability to capture the raw emotion and struggles of life in a way that resonates with people from all walks of life.</p>
-    </section>
+</head>
+<body>
+    <nav>
+        <a href="index.html" style="font-size: 246%; text-decoration: underline;">Ten Stages of Genocide</a>
+        <br>
+        <div>
+            <a href="index.html">Classification</a>
+            <a href="symbolisation.html">Symbolisation</a>
+            <a href="discrimination.html">Discrimination</a>
+            <a href="dehumanisation.html">Dehumanisation</a>
+            <a href="organisation.html">Organisation</a>
+            <a href="polarisation.html">Polarisation</a>
+            <a href="preparation.html">Preparation</a>
+            <a href="persecution.html">Persecution</a>
+            <a href="extermination.html">Extermination</a>
+            <a href="denial.html">Denial</a>
+        </div>
+    </nav>
     <br>
+    <br>
+    <br>
+    <main>
+        <h1 style="text-align: center;">[Stage Name]</h1>
+        <div class="definition">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+        </div>
+        <div class="representation">
+            <div class="representationP">
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            </div>
+            <img src="10sog.jpg" class="representationImg">
+            <img src="10sog.jpg" class="representationImg">
+        </div>
+        <div class="examples">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+        </div>
+    </main>
     <footer>
-      <p>Created by DeJuan C, Daniel C, Aiden C.</p>
+        <p>Creator; DeJuan Cameron</p>
     </footer>
-  </body>
+</body>
 </html>
