--- a/polarisation.html
+++ b/polarisation.html
@@ -15,7 +15,7 @@
         <a href="index.html" style="font-size: 246%; text-decoration: underline;">Ten Stages of Genocide</a>
         <br>
         <div>
-            <a href="index.html">Classification</a>
+            <a href="classification.html">Classification</a>
             <a href="symbolisation.html">Symbolisation</a>
             <a href="discrimination.html">Discrimination</a>
             <a href="dehumanisation.html">Dehumanisation</a>
