--- a/stages/dehumanisation.html
+++ b/stages/dehumanisation.html
@@ -43,7 +43,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
             </div>
-            <img src="10sog.jpg" class="representationImg">
+            <img src="dehumanisation.html" class="representationImg">
+            <p>"We Choose to Fight: Nobody Elected Elon Protest" by Geoff Livingston is licensed under CC BY 2.0.</p>
             <img src="10sog.jpg" class="representationImg">
         </div>
         <div class="examples">
